--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <section>
         <h2>Have Questions? We’re Here to Help</h2>
-        <p>Contact us at <a href="mailto:support@pintech.com">support@pintech.com</a> or call us at (123) 456-7890.</p>
+        <p>Contact us at <a href="mailto:support@pintech.com">support@pintech.com</a> or call us at (+234) 803-4256403.</p>
         <form class="contact-form">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
